Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13063

Server crashes in intern_plugin_lock or assertion `plugin_ptr->ref_count == 1' fails in plugin_init

    XMLWordPrintable

Details

    Description

      perl ./mtr main.1st --mysqld=--myisam_recover_options=NONE
      

      5.5 7d57ba6e28f

      mysqld: /data/src/5.5/sql/sql_plugin.cc:1613: int plugin_init(int*, char**, int): Assertion `plugin_ptr->ref_count == 1' failed.
      170612 23:36:33 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f4bab9c0ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x000000000061275d in plugin_init (argc=0x14d3088 <remaining_argc>, argv=0x7f4bab025bb0, flags=0) at /data/src/5.5/sql/sql_plugin.cc:1613
      #9  0x0000000000557308 in init_server_components () at /data/src/5.5/sql/mysqld.cc:4294
      #10 0x0000000000558347 in mysqld_main (argc=85, argv=0x7f4bab025bb0) at /data/src/5.5/sql/mysqld.cc:4891
      #11 0x0000000000550946 in main (argc=7, argv=0x7ffe9acc4f48) at /data/src/5.5/sql/main.cc:25
      

      5.5.56

      #2  <signal handler called>
      #3  intern_plugin_lock (rc=0x0, lex=<optimized out>) at /home/buildbot/buildbot/build/sql/sql_plugin.cc:928
      #4  plugin_thdvar_init (thd=0x7ffc4ca1d790) at /home/buildbot/buildbot/build/sql/sql_plugin.cc:2963
      #5  0x0000000000576043 in THD::init (this=this@entry=0x7ffc4ca1d790) at /home/buildbot/buildbot/build/sql/sql_class.cc:1242
      #6  0x0000000000576dd9 in THD::THD (this=0x7ffc4ca1d790) at /home/buildbot/buildbot/build/sql/sql_class.cc:928
      #7  0x00000000005ae867 in plugin_load (tmp_root=tmp_root@entry=0x7ffc4ca21f90) at /home/buildbot/buildbot/build/sql/sql_plugin.cc:1713
      #8  0x00000000005b0d49 in plugin_init (argc=argc@entry=0x121bbf0 <remaining_argc>, argv=0x7f3eae04dc98, flags=0) at /home/buildbot/buildbot/build/sql/sql_plugin.cc:1629
      #9  0x0000000000529090 in init_server_components () at /home/buildbot/buildbot/build/sql/mysqld.cc:4294
      #10 0x0000000000529c8b in mysqld_main (argc=92, argv=0x7f3eae04dc98) at /home/buildbot/buildbot/build/sql/mysqld.cc:4891
      #11 0x00007f3eaebae2b1 in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
      #12 0x0000000000520ca9 in _start ()
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.