MDEV-13063 Server crashes in intern_plugin_lock or assertion `plugin_ptr->ref_count == 1' fails in plugin_init

if a forced plugin is disabled (for any reason, e.g. invalid command-line
option) - it's an error